--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.9.2",
+    "framer-motion": "^11.2.6",
     "gsap": "^3.12.5",
     "jwt-decode": "^4.0.0",
     "livekit-client": "^1.15.4",
@@ -43,6 +44,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-spinners": "^0.13.8",
+    "simplex-noise": "^4.0.1",
     "sonner": "^1.2.4",
     "string-to-color": "^2.2.2",
     "svix": "^1.14.0",
